<resources>
    <string name="app_name">ChitChat</string>
    <string name="profile_picture_desc">Helloworld\n</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="close">Close</string>
    <string name="enter_new_text">Enter new text</string>
    <string name="new_text">New text:</string>
    <string name="enter_old_text">Enter old text</string>
    <string name="old_text">Old text:</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="old_email">Old Email:</string>
    <string name="new_email">New Email:</string>
</resources>